--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+h1{
+    position: relative;
+    background-color: #fffaaf;
+    border: 1px solid rgb(245, 187, 62);
+}
+
+
 form {
     width: 50%;
     margin: 0 auto;
